# comp_gen

./: CMakeLists.txt  README.md  TODO.txt
include/: Bar.hpp  Composition.hpp  CompositionEvent.hpp  CompositionExporter.hpp  ConfigParser.hpp  Instrument.hpp  Intervals.hpp  Key.hpp  KeyEvent.hpp  Note.hpp  NoteEvent.hpp  Scale.hpp  Section.hpp  TempoEvent.hpp  TimeSigEvent.hpp  Track.hpp  TrackType.hpp
include/configs/: ChordConfig.hpp  CompositionConfig.hpp  KeyConfig.hpp  MelodyConfig.hpp  ProgressionConfig.hpp  RhythmConfig.hpp  SectionConfig.hpp  SectionConfigOption.hpp  TempoConfig.hpp  TimeSigConfig.hpp  TrackConfig.hpp
include/generators/: ChordGenerator.hpp  CompositionGenerator.hpp  KeyGenerator.hpp  MelodyGenerator.hpp  ProgressionGenerator.hpp  RhythmGenerator.hpp  SectionGenerator.hpp  TempoGenerator.hpp  TimeSigGenerator.hpp
include/util/: Random.hpp
source/: Bar.cpp  Composition.cpp  ConfigParser.cpp  main.cpp
source/configs/: ChordConfig.cpp  MelodyConfig.cpp  ProgressionConfig.cpp  RhythmConfig.cpp  SectionConfig.cpp  SectionConfigOption.cpp  TrackConfig.cpp
source/generators/: CompositionGenerator.cpp  SectionGenerator.cpp
source/util/: Random.cpp
